--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <section>
     <article>
       <h3 style="--i:6;">Hello, I'm</h3>
-      <h2>Timtotic</h2>
+      <h2>Mr. B</h2>
       <h3 style="--i:8;">I'm a <span><a href="https://fr.wikipedia.org/wiki/D%C3%A9veloppement_web_frontal" target="_blank" title="Wikipedia">Frontend developer</a></span></h3>
-      <p>fdjhfdfhs fhdgbfhjsdbfksdjfbd shj fbhdjh vcdsjk fhndfbnd vfcjxh,hfgbxjfd vbvddh fgdfbd cfdsbvfbcds fchdsfhsjhdfhdvf hdgshfh</p>
+      <p>I do what I do !</p>
     </article>
     <div class="img"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png" alt=""></div>
   </section>
