--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <article>
       <h3 style="--i:6;">Hello, I'm</h3>
       <h2>Mr. B</h2>
-      <h3 style="--i:8;">I'm a <span><a href="https://fr.wikipedia.org/wiki/D%C3%A9veloppement_web_frontal" target="_blank" title="Wikipedia">Frontend developer</a></span></h3>
+      <h3 style="--i:8;">I'm a Software Architect <span><a href="https://fr.wikipedia.org/wiki/D%C3%A9veloppement_web_frontal" target="_blank" title="Wikipedia">Frontend developer</a></span></h3>
       <p>I do what I do !</p>
     </article>
     <div class="img"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png" alt=""></div>
